Archive2/79/2b0cb3bc7e86ed/output
main.cpp:21:2: error: ‘fdsmfdklsa’ does not name a type
 }fdsmfdklsa
  ^
